nova_tests/strings/neg/plan131_vec_eq_pos.nv
// Plan 131 Р¤.4 вЂ” Vec[T] Equal: pairwise element comparison.
// EXPECT_OUTPUT: true
// false

module neg.plan131_vec_eq_pos

import std.collections.vec.{Vec}

fn main() -> () {
    ro a = Vec[int].of(1, 2, 3)
    ro b = Vec[int].of(1, 2, 3)
    ro c = Vec[int].of(1, 2, 4)
    println(a.equal(b))
    println(a.equal(c))
}
